--- a/spring-jpa-demo/src/main/resources/application.properties
+++ b/spring-jpa-demo/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url= jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=hr
-spring.datasource.password=hr
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+
+# JPA PROPERTIES
+spring.datasource.url= jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=testuser
+spring.datasource.password=testuser
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
